--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "keystone dev",
     "start": "keystone start",
-    "build": "NODE_ENV=production keystone build",
+    "build": "keystone build",
     "postinstall": "keystone build --no-ui --frozen"
   },
   "dependencies": {
